objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>SC_MedicalCode__c</fullName>
        <description>This indicates the abbreviation of the medical Requirements field which holds the full name of the medical test.</description>
        <label>Medical Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_MedicalQuestionnaire__c</fullName>
        <description>This field indicates whether or not the test is required</description>
        <label>Medical Questionnaire</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_MedicalRequirement__c</fullName>
        <description>This field indicates the full name of the medical test</description>
        <label>Medical Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A.L.T. Blood Test</fullName>
                </value>
                <value>
                    <fullName>A.S.T. Blood Test</fullName>
                </value>
                <value>
                    <fullName>Alkaline Phosphatase-Blood Test</fullName>
                </value>
                <value>
                    <fullName>Await Result from External LAB.NO Further Action Required</fullName>
                </value>
                <value>
                    <fullName>Blood Urea Nitrogen</fullName>
                </value>
                <value>
                    <fullName>Carbohydrate Deficient Transferring</fullName>
                </value>
                <value>
                    <fullName>CD4 Cell Count</fullName>
                </value>
                <value>
                    <fullName>Cholesterol and HDL Ratio</fullName>
                </value>
                <value>
                    <fullName>Collection of Urine Specimen and Dispatch to Pathologists</fullName>
                </value>
                <value>
                    <fullName>Cotinine Test for Nicotine</fullName>
                </value>
                <value>
                    <fullName>C-Reactive Protein</fullName>
                </value>
                <value>
                    <fullName>Creatinine Clearance</fullName>
                </value>
                <value>
                    <fullName>Drawing of Blood Specimen and Dispatch to Pathologists</fullName>
                </value>
                <value>
                    <fullName>Erythrocyte Sedimentation Rate (Westergren Test)</fullName>
                </value>
                <value>
                    <fullName>Estimated Average Glucose</fullName>
                </value>
                <value>
                    <fullName>Fasting Blood Serum Triglycerides (Fasting 10 Hours)</fullName>
                </value>
                <value>
                    <fullName>Fasting Blood Sugar (Fasting 10 Hours)</fullName>
                </value>
                <value>
                    <fullName>Ferritin Test</fullName>
                </value>
                <value>
                    <fullName>Full Blood Count (Excluding ESR)</fullName>
                </value>
                <value>
                    <fullName>Full Blood Count (Including ESR)</fullName>
                </value>
                <value>
                    <fullName>Gamma Glutamyl Transpeptidase</fullName>
                </value>
                <value>
                    <fullName>Glycosulated Haemoglobin</fullName>
                </value>
                <value>
                    <fullName>HBA1C Sent to External LAB.NO Further Action Required</fullName>
                </value>
                <value>
                    <fullName>Hepatitis B Core Antibody IGM</fullName>
                </value>
                <value>
                    <fullName>Hepatitis B Surface Antibody</fullName>
                </value>
                <value>
                    <fullName>Hepatitis B Surface Antigen</fullName>
                </value>
                <value>
                    <fullName>Hepatitis C Antibody</fullName>
                </value>
                <value>
                    <fullName>High Density Lipoprotein</fullName>
                </value>
                <value>
                    <fullName>HIV Elisa 2 &amp; 3 Confirmatory</fullName>
                </value>
                <value>
                    <fullName>HIV Immunodeficiency Virus Antibody Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>SC_MedicalRequirement</fullName>
        <active>true</active>
        <description>The medical requirements to complete for a particular work order</description>
        <label>Medical Requirement</label>
    </recordTypes>
</CustomObject>